# nanobot

./: .gitignore  GUI_INPUT_CONTROL_UPDATE.md  README.md  SYNC_GUIDE.md  VERSION_CONTROL_STRATEGY.md
nanobot/agent/: context.py  loop.py
nanobot/cli/: commands.py
nanobot/config/: schema.py
nanobot/providers/: registry.py
nanobot/skills/: __init__.py
nanobot/skills/gui-input-control/: SKILL.md  TEST_REPORT.md  __init__.py  gui_control.py  test_gui.py  tool.py
nanobot/skills/gui-input-control/examples/: basic_example.py
nanobot/skills/nanobot-zzc-updates/: SKILL.md
nanobot/skills/windows-screen-capture/: SKILL.md  __init__.py  capture_client.py  tool.py
nanobot/skills/wslg-windows-screenshot/: SKILL.md  __init__.py  test_wslg_screenshot.py  wslg_screenshot.py
nanobot/skills/wslg-windows-screenshot/examples/: automation_example.py  basic_example.py  ocr_example.py
scripts/: build-simple.ps1  build-windows-service.ps1  check-upstream.sh  install-service.ps1  start-service.ps1  stop-service.ps1  sync-upstream.sh  uninstall-service.ps1
windows-service/: Cargo.toml  build.rs
windows-service/src/: main.rs
windows-service/src/capture/: mod.rs  wgc.rs
windows-service/src/encoder/: jpeg.rs  mod.rs
windows-service/src/server/: mod.rs  socket.rs
